# GlassBird-Game-Engine

./: CMakeLists.txt  README.md  S24_Fayyaad_Hassan.sln  unique.txt
GlassBird/: CMakeLists.txt  GlassBird.vcxproj  GlassBird.vcxproj.filters
GlassBird/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
GlassBird/include/: GlassBird.h
GlassBird/src/: GlassBirdApplication.cpp  GlassBirdApplication.h  GlassBirdEvents.cpp  GlassBirdEvents.h  GlassBirdKeys.h  GlassBirdWindow.cpp  GlassBirdWindow.h  Image.cpp  Image.h  ImageImplement.h  Renderer.cpp  Renderer.h  RendererImplement.h  Shader.cpp  Shader.h  ShaderImplement.h  Unit.cpp  Unit.h  Utility.h  WindowImpl.h  pch.h
GlassBird/src/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
GlassBird/src/codeOpenGL/: ImageOpenGL.cpp  ImageOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h
S24_Fayyaad_Hassan/: CMakeLists.txt  MyGame.cpp  MyGame.h  S24_Fayyaad_Hassan.vcxproj  S24_Fayyaad_Hassan.vcxproj.filters  Source.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
